--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionic-angular": "2.0.0-beta.11",
     "ionicons": "3.0.0",
     "meteor-node-stubs": "0.2.3",
+    "meteor-rxjs": "^0.4.3",
     "ng2-translate": "2.1.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
