Basic functionality all working (add food item, display on food and history page, mark foods as eaten or trashed on food page)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "angular2-meteor": "^0.5.5",
     "angular2-meteor-auto-bootstrap": "^0.5.5",
+    "angular2-moment": "^1.0.0-beta.6",
     "bcrypt": "^0.8.7",
     "es6-promise": "3.2.1",
     "es6-shim": "0.35.1",
@@ -27,6 +28,7 @@
     "ionicons": "3.0.0",
     "meteor-node-stubs": "0.2.3",
     "meteor-rxjs": "^0.4.3",
+    "moment": "^2.15.2",
     "ng2-translate": "2.1.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
