--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:md-css": "node-sass --include-path node_modules/ionic-angular --include-path node_modules/ionicons/dist/scss ../theme/app.md.scss | postcss --local-plugins --use autoprefixer --output public/stylesheets/md-bundle.css",
     "build:fonts": "copyfiles -f 'node_modules/ionic-angular/fonts/*.+(ttf||woff||woff2)' public/fonts/",
     "watch:css": "nodemon -w ../theme -e scss -x npm run build:ios-css build:md-css",
-    "build": "npm-run-all build:*"
+    "build": "npm-run-all build:*",
+    "seedjson": "mongoimport --host 127.0.0.1:3001 --db meteor --collection foods --type json --file data.json --jsonArray --drop"
   },
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
